Tue Aug 16 12:09:09 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/Makefile.am: Add ft and type1 modules.

Mon Aug 15 15:41:26 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/extmod/Makefile.am (libextmod_la_LIBADD):
	Link this module with libXext.la.

Mon Aug 15 14:56:57 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/Makefile.am (libdixmods_la_SOURCES): Remove
	the xkb* files.

	* hw/xfree86/Makefile.am (Xorg_LDADD): Add xkbVT.o and friends as
	the last things on the link line so they will override the symbols
	in libxkb.a.  Add a comment on how this situation might not be
	considered ideal.

Mon Aug  8 13:36:23 2005  Søren Sandmann  <sandmann@redhat.com>

	* include/xorg-config.h.in: #undef PIXPRIV here.

2005-08-07  Keith Packard  <keithp@keithp.com>

	* include/dix-config.h.in:
	Re-add _XOPEN_SOURCE as it's needed *sometimes*.
	Place it in #ifndef to avoid whinging.

2005-08-07  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* GL/mesa/X/.cvsignore:
	* Xext/extmod/.cvsignore:
	* afb/.cvsignore:
	* cfb/.cvsignore:
	* cfb16/.cvsignore:
	* cfb24/.cvsignore:
	* cfb32/.cvsignore:
	* hw/dmx/.cvsignore:
	* hw/dmx/config/.cvsignore:
	* hw/vfb/.cvsignore:
	* hw/xfree86/.cvsignore:
	* hw/xfree86/common/.cvsignore:
	* hw/xfree86/dixmods/.cvsignore:
	* hw/xfree86/exa/.cvsignore:
	* hw/xfree86/os-support/linux/drm/.cvsignore:
	* hw/xfree86/ramdac/.cvsignore:
	* hw/xfree86/scanpci/.cvsignore:
	* hw/xfree86/x86emu/.cvsignore:
	* hw/xfree86/xaa/.cvsignore:
	* hw/xfree86/xf1bpp/.cvsignore:
	* hw/xfree86/xf4bpp/.cvsignore:
	* hw/xnest/.cvsignore:
	* include/.cvsignore:
	* mfb/.cvsignore:
	Add autogenerated source files and other
	various non-CVS material to .cvsignore files
	
	* hw/xfree86/exa/Makefile.am:
	Use XORG_CFLAGS.  Ensure that all exa files are in SOURCES
	
	* include/dix-config.h.in:
	remove _XOPEN_SOURCE as it's always in xtrans.pc these days
	and gcc whines
	
	* configure.ac: