@@ -1,3 +1,9 @@
+Wed Aug 17 14:54:49 2005  Søren Sandmann  <sandmann@redhat.com>
+
+	* Xext/Makefile.am: Conditionally compile in xprint.c
+
+	* Makefile.am, configure.ac: Add Xprint
+
 Tue Aug 16 12:09:09 2005  Søren Sandmann  <sandmann@redhat.com>
 
 	* hw/xfree86/dixmods/Makefile.am: Add ft and type1 modules.
